first section completed

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Toboolist</title>
     <link rel="stylesheet" href="css/style.css">
+    <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    
 </head>
 <body>
     <header>
@@ -18,8 +23,15 @@
             <button>Add section</button>
         </nav>
 
-        <div>
-        </div>
+        <!-- ul-1 -->
+        <ul>&#9662; New Task
+            <li>
+                <div class="check-mark">&#10003;</div>
+                <div class="task">Recruiting blog post</div>
+                <div class="little-boxes">Editorial</div>
+            </li>
+        </ul>
+
     </main>
 
 
