--- a/index.html
+++ b/index.html
@@ -27,11 +27,61 @@
         <ul>&#9662; New Task
             <li>
                 <div class="check-mark">&#10003;</div>
-                <div class="task">Recruiting blog post</div>
-                <div class="little-boxes">Editorial</div>
+                <div class="task">Quarterly Newsletter</div>
+                <div class="little-boxes blue">Editorial</div>
             </li>
         </ul>
 
+        <ul>&#9662; Today
+            <li>
+                <div class="check-mark">&#10003;</div>
+                <div class="task">Recruiting blog post</div>
+                <div class="little-boxes blue">Editorial</div>
+            </li>
+
+            <li>
+                <div class="check-mark">&#10003;</div>
+                <div class="task">Mobile app luaunch</div>
+                <div class="little-boxes purple">Q1 Goals</div>
+            </li>
+
+            <li>
+                <div class="cross-mark">&#10005;</div>
+                <div class="task">Interview John H.</div>
+                <div class="little-boxes green">Recruiting</div>
+            </li>
+
+            <li>
+                <div class="check-mark">&#10003;</div>
+                <div class="task">Summit update to mobile storefronts</div>
+                <div class="little-boxes orange">Mobile</div>
+            </li>
+        </ul>
+
+        <ul>&#9662; Upcoming
+            <li>
+                <div class="cross-mark">&#10005;</div>
+                <div class="task">Schedule meeting with Alex</div>
+            </li>
+
+            <li>
+                <div class="check-mark">&#10003;</div>
+                <div class="task">Homepage refresh</div>
+                <div class="little-boxes pink">Website</div>
+            </li>
+
+            <li>
+                <div class="check-mark">&#10003;</div>
+                <div class="task">Onboard new Sales team members</div>
+                <div class="little-boxes light-green">Sales</div>
+            </li>
+
+            <li>
+                <div class="check-mark">&#10003;</div>
+                <div class="task">Review editorial calendar</div>
+                <div class="little-boxes blue">Editorial</div>
+            </li>
+        </ul>
     </main>
 
 
