--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
     <main>
         <nav>
-            <button>Add Task</button>
-            <button>Add section</button>
+            <button class="blue-button">Add Task</button>
+            <button class="white-button">Add section</button>
         </nav>
 
         <!-- ul-1 -->
@@ -32,6 +32,7 @@
             </li>
         </ul>
 
+        <!-- ul-2 -->
         <ul>&#9662; Today
             <li>
                 <div class="check-mark">&#10003;</div>
@@ -58,6 +59,7 @@
             </li>
         </ul>
 
+        <!-- ul-3 -->
         <ul>&#9662; Upcoming
             <li>
                 <div class="cross-mark">&#10005;</div>
